fixed img's not showing up

--- a/1337design.css
+++ b/1337design.css
@@ -1,5 +1,5 @@
 
-.imgclass {
+img {
   width: 80px;
   height: 80px;
 
